fix dark mode

--- a/src/components/ButtonModalClientArea/styles.module.scss
+++ b/src/components/ButtonModalClientArea/styles.module.scss
@@ -20,7 +20,7 @@
   .modalBox {
 
     position: relative;
-    background-color: #ffffff;
+    background-color: var(--bg-color);
     padding: 1.8rem;
     border-radius: 1rem;
     box-shadow: 0px 6px 7px 2px #00000029;
@@ -31,7 +31,7 @@
 
     .submitButtom {
       width: 100%;
-      background-color: #3A75BB;
+      background-color: var(--blue-600);
       color: #ffffff;
       border-radius: 0.5rem;
       font-size: 1.2rem;
@@ -49,8 +49,7 @@
     }
   
     .closeButton{
-    
-      background-color: #83ABDA;
+      background-color: var(--blue-400);
     
       display: flex;
       justify-content: center;
