--- a/src/components/InputIcon/styles.module.scss
+++ b/src/components/InputIcon/styles.module.scss
@@ -3,7 +3,7 @@
   display: flex;
 
   .iconLeft {
-    background-color: #DEE8F5;
+    background-color: var(--blue-500-40);
     padding: 0.6rem;
     color: #3E7CC5;
     border-radius: 0.5rem 0 0 0.5rem;
@@ -17,7 +17,7 @@
   .input{
     width: 100%;
     color: #3E7CC5;
-    background-color: #EEF3FA;
+    background-color: var(--blue-05);
     border: none;
     padding-left: 0.7rem;
     font-size: 1.2rem;
