--- a/src/styles/AreaCliente.module.scss
+++ b/src/styles/AreaCliente.module.scss
@@ -1,5 +1,5 @@
 .bgTitle {
-  background-color: #3a75bb;
+  background-color: var(--blue-600);
   color: var(--white);
   text-align: center;
   padding: 2rem 1rem;
